--- a/lib/dtasm_rs/Cargo.toml
+++ b/lib/dtasm_rs/Cargo.toml
@@ -10,6 +10,6 @@ edition = "2018"
 libc = "0.2.98"
 once_cell = "1.8.0"
 thiserror = "1.0.26"
-flatbuffers = { version = "0.6.2", path = "../../third_party/flatbuffers.git/rust/flatbuffers" }
+flatbuffers = { version = "2.0.0", path = "../../third_party/flatbuffers.git/rust/flatbuffers", default-features = false }
 dtasm_abi = { version = "0.1.0", path = "../dtasm_abi" }
 dtasm_base = { version = "0.1.0", path = "../dtasm_base_rs" }
